shop changes
